# metabolite-annotator

./: .gitignore  README.md  pyproject.toml
src/metabolite_annotator/: __init__.py  cli.py  config.py  data.py  download.py  run.py  spectrum.py
src/metabolite_annotator/constants/: cache_duration.py  urls.py
src/metabolite_annotator/data/: __init__.py  data.py  download.py
src/metabolite_annotator/tools/: __init__.py  cfm.py  fbmn.py  gnps.py  isdb.py  spectral_db.py
src/metabolite_annotator/tools/sirius/: __init__.py  config.py  instrument.py  sirius_config.py
tests/: test_cfm.py  test_download.py  test_fbmn.py  test_libraries.py  test_load_mgf.py  test_sirius.py
tests/data/: Kaempferol.ms  input.mgf  input.ms2_only.mgf
